Fri Apr  8 20:49:40 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Alt_Mapping/Options.cpp:

          Removed ACE_RCSID macro.

        * tao/String_Manager_T.h:

          Debugging changes and comments.

Tue Apr  5 17:46:38 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/BiDir_GIOP/*.cpp:
        * tao/CodecFactory/*.cpp:
        * tao/Messaging/*.cpp:
        * tao/PI/*.cpp:
        * tao/ValueType/*.cpp:
        * orbsvcs/orbsvcs/*.cpp:
        * orbsvcs/orbsvcs/Event/*.cpp:
        * orbsvcs/orbsvcs/Sched/*.cpp:
        * orbsvcs/orbsvcs/ESF/ESF_RefCount_Guard.cpp:
        * orbsvcs/orbsvcs/Naming/Naming_Client.cpp:

          - Removed ACE_RCSID macros from non-generated source files.
          - Changed 'ACE_AUTO_PTR_RESET' to 'ACE_auto_ptr_reset' and modified signature
          - Updated #includes to reflect ACE changes

Tue Apr  5 16:50:23 UTC 2011  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tao/*.cpp:
        * tao/CodeSet/*.cpp:
        * tao/AnyTypeCode/*.cpp:
        * tao/PortableServer/*.cpp:
        * TAO_IDL/be/be_visitor_array/array_ch.cpp:
        * TAO_IDL/util/utl_indenter.cpp:

          - Removed ACE_RCSID macros from non-generated source files.
          - Changed 'ACE_AUTO_PTR_RESET' to 'ACE_auto_ptr_reset' and modified signature

        * TAO_IDL/be/be_codegen.cpp:
        * TAO_IDL/be/be_interface.cpp:

          Updated use syntax of random seed corresponding to changes in ACE.

        * tao/QtResource.mpc:

          Updated changed in base project name.

Tue Sep 28 17:46:42 UTC 2010  Jeff Parsons <j.parsons@vanderbilt.edu>

        * tests/Alt_Mapping/alt_mapping_i.cpp:
        * tests/Alt_Mapping/server.cpp:
        * tests/Alt_Mapping/alt_mapping_i.h:
        * tests/Alt_Mapping/driver.cpp:
        
          Updated to
            - use const std::string<>& for IN arg signature
            - use ORB_init() with std::string for ORB name arg
